...
    >
      <Tab.Screen
        name="Chats"
        component={RoomListScreen}
        options={{
          title: 'Chats',
          tabBarButtonTestID: 'tab-chats',
          tabBarIcon: () => <TabIcon icon="💬" />,
        }}
      />
      <Tab.Screen
        name="Contacts"
        component={ContactsScreen}
...
      />
      <Tab.Screen
        name="Me"
        component={MeScreen}
        options={{
          title: 'Me',
          tabBarButtonTestID: 'tab-me',
          tabBarIcon: () => <TabIcon icon="👤" />,
        }}
      />
    </Tab.Navigator>
  );
}
...
